@@ -1,5 +1,11 @@
 2012-11-30  Kai Tietz  <ktietz@redhat.com>
 
+	* config/i386/host-mingw32.c (va_granularity): Make none-const.
+	(mingw32_gt_pch_alloc_granularity): Return OS' allocation
+	granularity.
+	(mingw32_gt_pch_use_address): Retry mapping of used address
+	as multiple instances might interfer.
+
 	* config/i386/mingw32.h (SHARED_LIBGCC_SPEC): Synchronize with
 	cygwin-host.
 
